[package]
name = "beet_core"
description = "A framework for creation of simple pixel art games in Rust."
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/beet_core"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "minimal"

[dependencies]
pixels = "0.12.1"
# TODO: fine-control features
winit = "0.28.3"
