[package]
name = "beet_core"
description = "A framework for creation of simple pixel art games in Rust."
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/beet_core"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "tmp"

[dependencies]

[dev-dependencies]
console_error_panic_hook = "0.1.7"
# TODO: include in debug only due to size impact https://docs.rs/console_log/1.0.0/console_log/#code-size
console_log = { version = "1.0.0", default-features = false, features = ["color"] }
log = "0.4.17"
pixels = { version = "0.12.1", default-features = false }
wasm-bindgen = { version = "0.2.84", default-features = false }
wasm-bindgen-futures = "0.4.34"
# All required web-sys features are provided already through a transitive dependency through `winit`,
#   so here we only make sure nothing extra is added.
web-sys = { version = "0.3.61", default-features = false }
winit = { version = "0.28.3", default-features = false }
winit_input_helper = "0.14.1"
